Add emitente controller
